// protoc  --go_out=../../pkg/api --go_opt=paths=source_relative --go-grpc_out=../../pkg/api --go-grpc_opt=paths=source_relative shortener.proto
syntax = "proto3";

option go_package = "/internal/transport/deliveryhttp/grpc/pb";
package pb;


service URL {
  rpc GetURLByID (RetrieveRequest) returns (RetrieveResponse) {}
  rpc PostOneURL (CreateRequest) returns (CreateResponse) {}
  rpc GetUserURLs (GetUserURLsRequest) returns (GetUserURLsResponse) {}
  rpc PostBatchURLs (CreateBatchRequest) returns (CreateBatchResponse) {}
  rpc DeleteBatchURLs (DeleteBatchRequest) returns (DeleteBatchResponse) {}
}

message RetrieveRequest {
  string short_url_id = 1;
}

message RetrieveResponse {
  string redirect_url = 1;
  string status = 2;
}

message CreateRequest {
  string user_id = 1;
  string original_url = 2;
}

message CreateResponse {
  string response_url = 1;
  string status = 2;
}

message GetUserURLsRequest {
  string user_id = 1;
}

message GetUserURLsResponse {
  message URL {
    string short_url = 1;
    string original_url = 2;
  }
  repeated URL URLs = 1;
  string status = 2;
}

message CreateBatchRequest {
  message URL {
    int32 correlation_id = 1;
    string original_url = 2;
  }
  string user_id = 1;
  repeated URL URLs = 2;
}

message CreateBatchResponse {
  message URL {
    int32 correlation_id = 1;
    string short_url = 2;
  }
  repeated URL urls = 1;
  string status = 2;
}

message DeleteBatchRequest {
  repeated string urls = 1;
  string user_id = 2;
}

message DeleteBatchResponse {
  string status = 1;
}

message GetStatsRequest {
  string ip_address = 1;
}

